--- a/test/dummy/config/database.yml
+++ b/test/dummy/config/database.yml
@@ -1,6 +1,6 @@
 development:
   adapter: sqlite3
-  database: db/development.sqlite3
+  database: ":memory:"
 test:
   adapter: sqlite3
-  database: db/test.sqlite3
+  database: ":memory:"
