--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ rvm:
   - jruby-19mode # JRuby in 1.9 mode
   - rbx-18mode
   - rbx-19mode
+gemfile:
+  - gemfiles/rake0.9.gemfile
+  - gemfiles/rake10.gemfile
