--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
 language: ruby
 
 rvm:
-  - 2.0.0
-  - 2.1.9
-  - 2.2.5
-  - 2.3.1
-  - jruby-18mode # JRuby in 1.8 mode
-  - jruby-19mode # JRuby in 1.9 mode
+  - 2.0
+  - 2.1
+  - 2.2
+  - 2.3
+  - jruby
   - rbx-2
 
 gemfile:
-  - gemfiles/rake0.9.gemfile
   - gemfiles/rake10.gemfile
   - gemfiles/rake11.gemfile
