Get some JRUBY_OPTS to stop mime-types-data complaining.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ rvm:
   - 2.3.1
   - jruby-21mode
 
+env:
+  JRUBY_OPTS="--2.1 --server -Dcext.enabled=false -Xcompile.invokedynamic=false"
+
 gemfile:
   - gemfiles/rake10.gemfile
   - gemfiles/rake11.gemfile
