Fix existing Rubocop violations

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,18 @@
 inherit_from: .rubocop_todo.yml
+Style/StringLiteral:
+  Enabled: true
+  EnforcedStyle: single_quotes
+Style/MutableConstant:
+  Exclude:
+    - 'lib/seedbank/version.rb'
+Lint/ScriptPermission:
+  Exclude:
+    - 'test/dummy/Rakefile'
 Metrics/LineLength:
   Exclude:
     - 'test/**/*'
   Max: 132
 Style/ConditionalAssignment:
+  Enabled: false
+Layout/EmptyLineAfterMagicComment:
   Enabled: false
