moved test models to city/county/state from family

--- a/test/dummy_kids/Gemfile
+++ b/test/dummy_kids/Gemfile
@@ -23,7 +23,7 @@ gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
 
-gem 'seedbank'
+gem 'seedbank', path: '../../'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
@@ -39,6 +39,7 @@ group :development, :test do
   gem 'minitest-rails'
   gem 'guard'
   gem 'guard-minitest'
+  gem 'database_cleaner'
 end
 
 group :development do
