--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,5 @@
 inherit_from: .rubocop_todo.yml
-Style/StringLiteral:
+Style/StringLiterals:
   Enabled: true
   EnforcedStyle: single_quotes
 Style/MutableConstant:
