--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ gemfile:
   - gemfiles/rake12.gemfile
 
 before_install:
-  - gem install bundler -v '~> 1.11' --no-ri --no-rdoc
+  - gem install bundler -v '~> 1.11'
